; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_init_cap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_init_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_ctrl = type { i64 }

@NVMET_QUEUE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvmet_ctrl*)* @nvmet_init_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvmet_init_cap(%struct.nvmet_ctrl* %0) #0 {
  %2 = alloca %struct.nvmet_ctrl*, align 8
  store %struct.nvmet_ctrl* %0, %struct.nvmet_ctrl** %2, align 8
  %3 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %2, align 8
  %4 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %3, i32 0, i32 0
  store i64 137438953472, i64* %4, align 8
  %5 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %2, align 8
  %6 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = or i64 %7, 251658240
  store i64 %8, i64* %6, align 8
  %9 = load i32, i32* @NVMET_QUEUE_SIZE, align 4
  %10 = sub nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %2, align 8
  %13 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = or i64 %14, %11
  store i64 %15, i64* %13, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
